--- a/mobile/src/main/res/menu/menu_main.xml
+++ b/mobile/src/main/res/menu/menu_main.xml
@@ -43,6 +43,11 @@
         android:orderInCategory="100"
         android:title="@string/action_audio"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_nearby"
+        android:orderInCategory="100"
+        android:title="@string/action_nearby"
+        app:showAsAction="never" />
     <!-- TODO: Disabled until I need to set some application settings/preferences
     <item
         android:id="@+id/action_settings"
