--- a/mobile/src/main/res/layout/activity_beacons.xml
+++ b/mobile/src/main/res/layout/activity_beacons.xml
@@ -15,7 +15,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".activity.beacon.BeaconActivity">
+    tools:context=".activity.beacons.BeaconsActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -31,6 +31,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_beacon" />
+    <include layout="@layout/content_beacons" />
 
 </android.support.design.widget.CoordinatorLayout>
