--- a/mobile/src/main/res/menu/menu_main.xml
+++ b/mobile/src/main/res/menu/menu_main.xml
@@ -54,4 +54,9 @@
         android:orderInCategory="100"
         android:title="@string/action_wifi"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_preferences"
+        android:orderInCategory="100"
+        android:title="@string/action_preferences"
+        app:showAsAction="never" />
 </menu>
