- Working on the Persistent Service - Some refactoring here and there - Added NanoHTTPD dependecy - Updated Copyright Notices - Etcs.

--- a/mobile/src/main/res/layout/content_preferences.xml
+++ b/mobile/src/main/res/layout/content_preferences.xml
@@ -12,8 +12,7 @@
 
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/preferences_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.preferences.PreferencesActivity"
-    android:id="@+id/preferences_container">
-</androidx.constraintlayout.widget.ConstraintLayout>
+    tools:context=".activity.preferences.PreferencesActivity"></androidx.constraintlayout.widget.ConstraintLayout>
