--- a/mobile/src/main/res/layout/content_beacons.xml
+++ b/mobile/src/main/res/layout/content_beacons.xml
@@ -22,10 +22,10 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin">
+        android:paddingBottom="@dimen/activity_vertical_margin">
 
         <TextView
             android:id="@+id/beacon_ranging_elapsed_time_label"
@@ -48,8 +48,8 @@
             android:id="@+id/beacon_list_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
             android:layout_below="@+id/beacon_ranging_elapsed_time_label"
+            android:layout_alignParentStart="true"
             android:text="@string/beacon_list"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
