--- a/mobile/src/main/res/layout/content_bluetooth_classic.xml
+++ b/mobile/src/main/res/layout/content_bluetooth_classic.xml
@@ -22,10 +22,10 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin">
+        android:paddingBottom="@dimen/activity_vertical_margin">
 
         <TextView
             android:id="@+id/bluetooth_name_label"
@@ -40,15 +40,15 @@
             android:id="@+id/bluetooth_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignStart="@+id/bluetooth_address" />
+            android:layout_alignStart="@+id/bluetooth_address"
+            android:layout_alignParentTop="true" />
 
         <TextView
             android:id="@+id/bluetooth_address_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
             android:layout_below="@+id/bluetooth_name_label"
+            android:layout_alignParentStart="true"
             android:text="@string/bluetooth_address"
             android:textStyle="bold" />
 
@@ -63,8 +63,8 @@
             android:id="@+id/bluetooth_discovery_elapsed_time_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
             android:layout_below="@+id/bluetooth_address_label"
+            android:layout_alignParentStart="true"
             android:text="@string/bluetooth_discovery_elapsed_time"
             android:textStyle="bold" />
 
@@ -87,8 +87,8 @@
             android:id="@+id/bluetooth_devices_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
             android:layout_below="@+id/bluetooth_discovery_elapsed_time_label"
+            android:layout_alignParentStart="true"
             android:text="@string/bluetooth_devices"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
