--- a/mobile/src/main/res/layout/content_sensors.xml
+++ b/mobile/src/main/res/layout/content_sensors.xml
@@ -22,10 +22,10 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin">
+        android:paddingBottom="@dimen/activity_vertical_margin">
 
         <TextView
             android:id="@+id/select_sensor_label"
@@ -40,14 +40,14 @@
             android:id="@+id/select_sensor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/select_sensor_label" />
+            android:layout_below="@+id/select_sensor_label"
+            android:layout_alignParentStart="true" />
 
         <GridLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_alignParentStart="true"
             android:layout_below="@+id/select_sensor"
+            android:layout_alignParentStart="true"
             android:layout_marginTop="8dp"
             android:columnCount="2">
 
