- Added Zeroconf Networking Support among other smaller changes and bug fixes

--- a/mobile/src/main/res/values/bools.xml
+++ b/mobile/src/main/res/values/bools.xml
@@ -12,6 +12,7 @@
 
 <resources>
     <bool name="preferences_default_allow_persistent_service">true</bool>
+    <bool name="preferences_default_allow_zeroconf">false</bool>
     <bool name="preferences_default_beacon_scan">true</bool>
     <bool name="preferences_default_beacon_advertise">false</bool>
     <bool name="preferences_default_device_capabilities_view">true</bool>
