--- a/mobile/src/main/res/xml/preferences.xml
+++ b/mobile/src/main/res/xml/preferences.xml
@@ -19,6 +19,10 @@
             android:defaultValue="@bool/preferences_default_allow_persistent_service"
             app:key="allow_persistent_service"
             app:title="@string/preferences_title_allow_persistent_service" />
+        <SwitchPreferenceCompat
+            android:defaultValue="@bool/preferences_default_allow_zeroconf"
+            app:key="allow_zeroconf"
+            app:title="@string/preferences_title_allow_zeroconf" />
     </PreferenceCategory>
     <PreferenceCategory
         app:key="category_beacon_scan"
@@ -51,7 +55,7 @@
             app:useSimpleSummaryProvider="true" />
     </PreferenceCategory>
     <PreferenceCategory
-        app:key="category_beacon_scan"
+        app:key="category_beacon_advertising"
         app:title="@string/preferences_category_beacon_advertising">
         <SwitchPreferenceCompat
             android:defaultValue="@bool/preferences_default_beacon_advertise"
