- Implemented Beacon Logging in order to perform some tests in the (near) future. (I should do something similar to the Desktop Client)

--- a/mobile/src/main/res/layout/activity_audio.xml
+++ b/mobile/src/main/res/layout/activity_audio.xml
@@ -32,6 +32,6 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <include layout="@layout/content_nearby_messages" />
+    <include layout="@layout/content_audio" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
