--- a/mobile/src/main/res/layout/content_beacons.xml
+++ b/mobile/src/main/res/layout/content_beacons.xml
@@ -10,56 +10,123 @@
   ~ You should have received a copy of the GNU General Public License along with YanuX Scavenger. If not, see <https://www.gnu.org/licenses/gpl.html>
   -->
 
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/nestedScrollView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".activity.beacons.BeaconsActivity"
     tools:showIn="@layout/activity_beacons">
 
-    <RelativeLayout
+    <TextView
+        android:id="@+id/beacons_ranging_elapsed_time_label_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:text="@string/beacons_ranging_elapsed_time"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/beacons_list_recycler_view"
+        app:layout_constraintEnd_toStartOf="@+id/beacons_ranging_elapsed_time_text_view"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/beacons_ranging_elapsed_time_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/beacons_list_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/beacons_list"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/beacons_list_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin">
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        android:scrollbars="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/beacons_log_filename_text_view"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/beacons_list_text_view" />
 
-        <TextView
-            android:id="@+id/beacon_ranging_elapsed_time_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:text="@string/beacon_ranging_elapsed_time"
-            android:textStyle="bold" />
+    <TextView
+        android:id="@+id/beacons_log_filename_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="128dp"
+        android:labelFor="@id/beacons_log_filename_edit_text"
+        android:text="@string/beacons_log_filename"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-        <TextView
-            android:id="@+id/beacon_ranging_elapsed_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="8dp"
-            android:layout_toEndOf="@+id/beacon_ranging_elapsed_time_label" />
+    <EditText
+        android:id="@+id/beacons_log_filename_edit_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:ems="10"
+        android:importantForAutofill="no"
+        android:inputType="text"
+        android:text="@string/beacons_log_filename_default"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/beacons_log_filename_text_view" />
 
-        <TextView
-            android:id="@+id/beacon_list_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/beacon_ranging_elapsed_time_label"
-            android:layout_alignParentStart="true"
-            android:text="@string/beacon_list"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
+    <TextView
+        android:id="@+id/beacons_log_time_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:labelFor="@id/beacons_log_time_edit_text"
+        android:text="@string/beacons_log_time"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/beacons_log_filename_edit_text" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/beacon_list"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/beacon_list_label"
-            android:scrollbars="vertical" />
+    <EditText
+        android:id="@+id/beacons_log_time_edit_text"
+        android:layout_width="wrap_content"
+        android:layout_height="46dp"
+        android:layout_marginStart="8dp"
+        android:ems="10"
+        android:importantForAutofill="no"
+        android:inputType="number"
+        android:text="@string/beacons_record_time_default"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/beacons_log_time_text_view" />
 
-    </RelativeLayout>
+    <ToggleButton
+        android:id="@+id/beacons_log_toggle_button"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:enabled="false"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/beacons_log_time_edit_text"
+        app:layout_constraintTop_toBottomOf="@+id/beacons_logging_text_view" />
 
-</androidx.core.widget.NestedScrollView>
+    <TextView
+        android:id="@+id/beacons_logging_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:text="@string/beacons_logging"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.408"
+        app:layout_constraintStart_toEndOf="@+id/beacons_log_filename_edit_text"
+        app:layout_constraintTop_toTopOf="@+id/beacons_log_filename_edit_text" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
